# AI_Scoring

./: .env.example  .gitignore  README.md  pyproject.toml
VLM-converter/: main.py  requirements.txt
VLM-converter/vlm_converter/: __init__.py  config.py  input_processing.py  latex_normalizer.py  openrouter_client.py  prompt_builder.py  request_id.py  response_parser.py  service.py  types.py  validation.py
src/: __init__.py  __main__.py  config.py  log.py
src/app/: __init__.py  cli.py
src/client/: __init__.py  key_pool.py  openrouter.py
src/config/: __init__.py  settings.py
src/direct_vlm/: __init__.py  prompt_builder.py  service.py
src/judge/: __init__.py  answer_parser.py  output.py  prompt_builder.py  response_parser.py  service.py  types.py
src/model/: __init__.py  types.py
src/pipeline/: __init__.py  context.py  handlers.py  pipeline.py  states.py
src/prompt/: __init__.py  loader.py
src/prompts/: __init__.py  judge.yaml  recognize.yaml
src/recognize/: __init__.py  input_processing.py  latex_normalizer.py  output.py  prompt_builder.py  service.py
tests/: benchmark.py
